feat: ajout des slides tiers

--- a/outils-notions-genie-logiciel-niveau-l2/presentation/base-genie-logiciel/index.html
+++ b/outils-notions-genie-logiciel-niveau-l2/presentation/base-genie-logiciel/index.html
@@ -374,6 +374,20 @@
                     <strong>refactoring.guru</strong>
                 </section>
 
+                <section>
+                    <h2>3 Tiers!!!</h2>
+                    <div class="save-illustration">
+                        <img src="../medias/3-tiers.png" alt="dev" />
+                    </div>
+                </section>
+
+                <section>
+                    <h2>3 Tiers!!!</h2>
+                    <div class="save-illustration">
+                        <img src="../medias/3-tiers-1.png" alt="dev" />
+                    </div>
+                </section>
+
             </section>
             <section data-background-iframe="https://codesandbox.io/s/new"></section>
         </div>
