feat: ajout du design api

--- a/outils-notions-genie-logiciel-niveau-l2/presentation/base-genie-logiciel/index.html
+++ b/outils-notions-genie-logiciel-niveau-l2/presentation/base-genie-logiciel/index.html
@@ -388,6 +388,28 @@
                     </div>
                 </section>
 
+                <section>
+                    <h2>3 Tiers!!!</h2>
+                    <div class="save-illustration">
+                        <img src="../medias/layer-architecture.png" alt="dev" />
+                    </div>
+                </section>
+
+
+                <section>
+                    <h2>3 Tiers!!!</h2>
+                    <div class="save-illustration">
+                        <img src="../medias/mvc-pattern.png" alt="dev" />
+                    </div>
+                </section>
+                <section>
+                    <h2>3 Tiers!!!</h2>
+                    <div class="save-illustration">
+                        <img src="../medias/api-design.png" alt="dev" />
+                    </div>
+                </section>
+
+
             </section>
             <section data-background-iframe="https://codesandbox.io/s/new"></section>
         </div>
