feat: ajout des diagrams

--- a/outils-notions-genie-logiciel-niveau-l2/presentation/base-genie-logiciel/index.html
+++ b/outils-notions-genie-logiciel-niveau-l2/presentation/base-genie-logiciel/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../dist/theme/genie-logiciel.css" />
 
     <!-- Theme used for syntax highlighted code -->
-    <link rel="stylesheet" href="plugin/highlight/monokai.css" />
+    <link rel="stylesheet" href="../plugin/highlight/monokai.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nanum Gothic Coding">
     <link rel="stylesheet" href="https://unpkg.com/@tabler/icons@latest/iconfont/tabler-icons.min.css" />
 </head>
@@ -837,11 +837,11 @@
             dependencies: [
                 // Other plugins
                 {
-                    src: "node_modules/revealjs-animated/dist/revealjs-animated.js",
+                    src: "../node_modules/revealjs-animated/dist/revealjs-animated.js",
                     async: true,
                 },
                 { src: 'https://d3js.org/d3.v4.min.js', async: true, },
-                { src: 'node_modules/reveal.js-d3js/d3js.js', async: true, },
+                { src: '../node_modules/reveal.js-d3js/d3js.js' },
             ],
         });
     </script>
