--- a/outils-notions-genie-logiciel-niveau-l2/presentation/base-genie-logiciel/diagram.html
+++ b/outils-notions-genie-logiciel-niveau-l2/presentation/base-genie-logiciel/diagram.html
@@ -2,32 +2,48 @@
 <meta charset="utf-8">
 
 <head>
-    <link rel="stylesheet" href="plugin/diagram/revealjs-diagram.css">
+    <style>
+        body {
+            width: 100%;
+            height: 100%;
+        }
+    </style>
+    <link rel="stylesheet" href="../plugin/diagram/revealjs-diagram.css">
 </head>
 
 <body>
-    <script src="https://d3js.org/d3.v3.min.js"></script>
+    <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="plugin/diagram/revealjs-diagram.js"></script>
+    <script src="../plugin/diagram/revealjs-diagram.js"></script>
     <script>
 
         var treeData = {
-            name: 'A',
+            name: 'root',
             x0: window.diagram.height / 2,
             y0: 0,
             children: []
         };
 
         var _transitions = [
-            window.diagram.addItem('B', 'A', treeData),
+            window.diagram.addItem('child 1', 'root', treeData),
+            window.diagram.addItem('child 2', 'root', treeData),
+            window.diagram.addItem('child 3', 'root', treeData),
+            window.diagram.addItem('tail', 'child 2', treeData),
+            window.diagram.addLink('child 1', 'tail', treeData),
+            window.diagram.addLink('child 3', 'tail', treeData)
         ];
 
         var _inverse_transitions = [
-            window.diagram.removeItem('B', treeData),
+            window.diagram.removeItem('child 1', treeData),
+            window.diagram.removeItem('child 2', treeData),
+            window.diagram.removeItem('child 3', treeData),
+            window.diagram.removeItem('tail', treeData),
+            window.diagram.removeLink('child 1', 'tail', treeData),
+            window.diagram.removeLink('child 3', 'tail', treeData)
         ];
 
-        // register the diagram
-        window.diagram.register('intro', function () {
+        // start the tree
+        window.diagram.register('closed', function () {
             window.diagram.init(treeData);
         });
     </script>
